Code: Improve diff algorithm.